@@ -3,7 +3,7 @@
   mail filter. If set, the filter considers two-word tokens as described
   in Jonathan A. Zdziarski's paper 'Advanced Language Classification using
   Chained Tokens', <http://www.nuclearelephant.com/papers/chained.html>.
-* When running in an UTF-8 locale, unprintable characters are now replaced
+* When running in a UTF-8 locale, unprintable characters are now replaced
   by Unicode control pictures or the Unicode replacement character when
   printing to a terminal.
 * The 'show' command now also avoids writing unprintable characters to a
@@ -15,6 +15,9 @@
 * Fixed a junk mail tokenizer bug which caused the remainder of a message
   to be ignored if a period occurred at the first position following another
   token boundary.
+* 'In-Reply-To' fields that refer to multiple message-IDs are now handled;
+  the first matching ID wins for the 'thread' command, and the ',' address
+  selects all referenced messages.
 
 [11.18] released 12/9/04
 * When the 'write' command asks for an attachment filename and a '|' is
